--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@pdftron/webviewer": "^8.8.0",
+    "@pdftron/webviewer": "^8.9.0-20221027",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
